--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     </section>
     <section class="subsection-mid">
         <img class="section-img" src="img/icon-02.svg" alt="img">
-        <div class="section-text-heading">Včasné doručení</div>
-        <div class="section-text">Kompenzujeme zákazníky při zpozdění!</div>
+        <div class="section-text-heading">Včasn&eacute; doručen&iacute;</div>
+        <div class="section-text">Kompenzujeme z&aacute;kazn&iacute;ky při zpozděn&iacute;!</div>
     </section>
     <section class="subsection-mid">
         <img class="section-img" src="img/icon-01.svg" alt="img">
-        <div class="section-text-heading">Vždy nablízku</div>
-        <div class="section-text">Pobočky po celé republice!</div>
+        <div class="section-text-heading">Vždy nabl&iacute;zku</div>
+        <div class="section-text">Pobočky po cel&eacute; republice!</div>
     </section>
 </main>
 <main class="lower-mid-section">
@@ -69,8 +69,9 @@
         <section class="subsection-lower">
             <img class="subsection-img" src="img/pcb.jpg" alt="">
             <div class="subsection-column">
-                <div class="subsection-text-heading">Micro součástky</div>
-                <div class="subsection-text">Vysoký výběr micro-počítačů pro domácí i profesionální bastlíře</div>
+                <div class="subsection-text-heading">Micro souč&aacute;stky</div>
+                <div class="subsection-text">Vysok&yacute; v&yacute;běr micro-poč&iacute;tačů pro dom&aacute;c&iacute; i
+                    profesion&aacute;ln&iacute; bastl&iacute;ře</div>
                 <button class="btn-1">MICRO-PC</button>
             </div>
         </section>
@@ -78,10 +79,11 @@
     <section class="subsection-wrapper-light">
         <section class="subsection-lower">
             <div class="subsection-column">
-                <div class="subsection-text-heading">Počítače</div>
-                <div class="subsection-text">Sestavené počítačové sestavy a vychytávky pro nenáročné uživatele
+                <div class="subsection-text-heading">Poč&iacute;tače</div>
+                <div class="subsection-text">Sestaven&eacute; poč&iacute;tačov&eacute; sestavy a vychyt&aacute;vky pro
+                    nen&aacute;ročn&eacute; uživatele
                 </div>
-                <button class="btn-1">POČÍTAČE</button>
+                <button class="btn-1">POČ&Iacute;TAČE</button>
             </div>
             <img class="subsection-img" src="img/pc.jpg" alt="">
         </section>
@@ -90,10 +92,10 @@
         <section class="subsection-lower">
             <img class="subsection-img" src="img/household.png" alt="">
             <div class="subsection-column">
-                <div class="subsection-text-heading">Pro domácnost</div>
-                <div class="subsection-text">Vychytávky pro chytrou a automatizovanou domácnost
+                <div class="subsection-text-heading">Pro dom&aacute;cnost</div>
+                <div class="subsection-text">Vychyt&aacute;vky pro chytrou a automatizovanou dom&aacute;cnost
                 </div>
-                <button class="btn-1 borders">DOMÁCNOST</button>
+                <button class="btn-1 borders">DOM&Aacute;CNOST</button>
             </div>
         </section>
     </section>
@@ -126,18 +128,19 @@
     </section>
     <section class="work-wrapper">
         <div class="work">
-            <div class="work-text-heading">Přidejte se k nám</div>
-            <div class="work-text">Pojďte nabrat zkušenosti z mladého kolektivu pracujícím v inovativním a moderním
-                prostředí
+            <div class="work-text-heading">Přidejte se k n&aacute;m</div>
+            <div class="work-text">Pojďte nabrat zku&scaron;enosti z mlad&eacute;ho kolektivu pracuj&iacute;c&iacute;m v inovativn&iacute;
+                m a modern&iacute;m
+                prostřed&iacute;
             </div>
-            <button class="btn-1 borders">NABÍDKA</button>
+            <button class="btn-1 borders">NAB&Iacute;DKA</button>
         </div>
     </section>
 </main>
 <footer>
     <div class="feedback">
         <div class="feedback-text">Daniel Linda</div>
-        <div class="feedback-subtext">Střední průmyslová škola Ječná 2024</div>
+        <div class="feedback-subtext">Středn&iacute; průmyslov&aacute; &scaron;kola Ječn&aacute; 2024</div>
     </div>
 </footer>
 </body>
