--- a/pages/cart.html
+++ b/pages/cart.html
@@ -38,23 +38,23 @@
 <main class="banner">
     <img class="banner-img" alt="banner" src="../img/profile.png">
     <div id="banner-text" class="banner-text">
-        <h1>Košík: Robert Stinka</h1>
+        <h1>Ko&scaron;&iacute;k: Robert Stinka</h1>
     </div>
 </main>
 <div class="cart-container">
     <nav>
-        <ul class="cart-nav">
-            <li class="cart-nav-item cart-nav-item--active">
+        <div class="cart-nav">
+            <a onclick="cartClick(this)" class="cart-nav-item cart-nav-item--active">
                 <p>
                     <strong>
                         1
                     </strong>
                 </p>
                 <p>
-                    Košík
+                    Ko&scaron;&iacute;k
                 </p>
-            </li>
-            <li class="cart-nav-item">
+            </a>
+            <a onclick="cartClick(this)" class="cart-nav-item">
                 <p>
                     <strong>
                         2
@@ -63,24 +63,24 @@
                 <p>
                     Doprava a platba
                 </p>
-            </li>
-            <li class="cart-nav-item">
+            </a>
+            <a onclick="cartClick(this)" class="cart-nav-item">
                 <p>
                     <strong>
                         3
                     </strong>
                 </p>
                 <p>
-                    Dodací údaje
+                    Dodac&iacute; &uacute;daje
                 </p>
 
-            </li>
-        </ul>
+            </a>
+        </div>
     </nav>
     <div class="cart-content">
         <p>
             <strong>
-                Váš košík je prázdný
+                V&aacute;&scaron; ko&scaron;&iacute;k je pr&aacute;zdn&yacute;
             </strong>
         </p>
         <button onclick="document.location = '../index.html'" class="btn-1">
@@ -88,12 +88,11 @@
         </button>
     </div>
 </div>
-
 <div class="other-products">
     <div class="other-products-title">
         <p>
             <strong>
-                Doporučené produkty pro vás:
+                Doporučen&eacute; produkty pro v&aacute;s:
             </strong>
         </p>
     </div>
@@ -113,8 +112,8 @@
                         </p>
                     </div>
                     <button class="btn-1 borders not-margin">
-                    <img src="../img/icon-shopping_cart.svg" alt="cart">
-                    Do košíku
+                        <img src="../img/icon-shopping_cart.svg" alt="cart">
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -133,7 +132,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -152,7 +151,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -171,7 +170,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -190,7 +189,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -209,7 +208,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -228,7 +227,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -247,7 +246,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -266,7 +265,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -285,7 +284,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -304,7 +303,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -323,7 +322,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -342,7 +341,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -361,7 +360,7 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
@@ -380,13 +379,13 @@
                     </div>
                     <button class="btn-1 borders not-margin">
                         <img src="../img/icon-shopping_cart.svg" alt="cart">
-                        Do košíku
+                        Do ko&scaron;&iacute;ku
                     </button>
                 </div>
             </div>
         </div>
         <button id="prev-btn" class="round-btn" onclick="scrollItems(-1)">
-        <img src="../img/before-icon.svg" alt="before">
+            <img src="../img/before-icon.svg" alt="before">
         </button>
         <button id="next-btn" class="round-btn" onclick="scrollItems(1)">
             <img src="../img/next-icon.svg" alt="next">
@@ -396,7 +395,7 @@
 <footer>
     <div class="feedback">
         <div class="feedback-text">Daniel Linda</div>
-        <div class="feedback-subtext">Střední průmyslová škola Ječná 2024</div>
+        <div class="feedback-subtext">Středn&iacute; průmyslov&aacute; &scaron;kola Ječn&aacute; 2024</div>
     </div>
 </footer>
 <script src="../script.js"></script>
