--- a/pages/favourite.html
+++ b/pages/favourite.html
@@ -39,7 +39,7 @@
 <main class="banner">
     <img class="banner-img" alt="banner" src="../img/profile.png">
     <div id="banner-text" class="banner-text">
-        <h1>Oblíbené produkty: Robert Stinka</h1>
+        <h1>Obl&iacute;ben&eacute; produkty: Robert Stinka</h1>
     </div>
 </main>
 <main class="lower-mid-section">
@@ -83,7 +83,7 @@
 <footer>
     <div class="feedback">
         <div class="feedback-text">Daniel Linda</div>
-        <div class="feedback-subtext">Střední průmyslová škola Ječná 2024</div>
+        <div class="feedback-subtext">Středn&iacute; průmyslov&aacute; &scaron;kola Ječn&aacute; 2024</div>
     </div>
 </footer>
 </body>
