--- a/pages/profile.html
+++ b/pages/profile.html
@@ -50,13 +50,13 @@
         <section class="subsection-lower">
             <form class="subsection-column">
                 <div class="subsection-text-heading">Profil</div>
-                <label>Jméno
+                <label>Jm&eacute;no
                     <input type="text">
                 </label>
-                <label>Příjmení
+                <label>Př&iacute;jmen&iacute;
                     <input type="text">
                 </label>
-                <label>Přezdívka
+                <label>Přezd&iacute;vka
                     <input type="text">
                 </label>
                 <label>Email
@@ -69,14 +69,14 @@
     <section class="subsection-wrapper-light">
         <section class="subsection-lower">
             <form class="subsection-column">
-                <div class="subsection-text-heading">Doručovací adresa</div>
+                <div class="subsection-text-heading">Doručovac&iacute; adresa</div>
                 <label>Ulice
                     <input class="light" type="text">
                 </label>
-                <label>Popisné č.
+                <label>Popisn&eacute; č.
                     <input class="light" type="number">
                 </label>
-                <label>Směrovací č.
+                <label>Směrovac&iacute; č.
                     <input class="light" type="number">
                 </label>
                 <label>Město
@@ -92,8 +92,8 @@
     <section class="subsection-wrapper-orange">
         <section class="subsection-lower">
             <form class="subsection-column">
-                <div class="subsection-text-heading">Fakturační údaje</div>
-                <label>Číslo karty
+                <div class="subsection-text-heading">Fakturačn&iacute; &uacute;daje</div>
+                <label>Č&iacute;slo karty
                     <input class="orange" type="number">
                 </label>
                 <label>Platnost
@@ -110,7 +110,7 @@
 <footer>
     <div class="feedback">
         <div class="feedback-text">Daniel Linda</div>
-        <div class="feedback-subtext">Střední průmyslová škola Ječná 2024</div>
+        <div class="feedback-subtext">Středn&iacute; průmyslov&aacute; &scaron;kola Ječn&aacute; 2024</div>
     </div>
 </footer>
 </body>
